--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,7 +15,7 @@ body {
 .content{
     height: 65vh;
 }
-@media screen and (max-width: 1366px){
+@media screen and (max-width: 1366px) and (max-height: 768px){
     .content{
         height: 82vh;
     }
@@ -136,6 +136,11 @@ option {
     padding-left: 0;
     border: 1px solid #fff;
     border-radius: 0;
+}
+.form-control:focus {
+    outline: none !important;
+    box-shadow: none !important;
+    border-color: #ced4da !important;
 }
 
 .form-area .btn {
